--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Laura Leal-Taixe’s site
-description:      Welcome to my site!
+description:      Welcome to Laura’s world!
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://lealtaixe.github.io
 #url:             http://localhost:4000
