--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Laura Leal-Taixe’s site
 description:      Welcome to Laura’s world!
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://lealtaixe.github.io
+url:              https://lealtaixe.github.io
 disqus_shortname: lealtaixe
 
 # Owner/author information
