new page opening links

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Laura Leal-Taixe’s site
+title:            Laura’s Home
 description:      Welcome to Laura’s world!
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              https://lealtaixe.github.io
