--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ disqus_shortname: lealtaixe
 # Owner/author information
 owner:
   name:           Laura Leal-Taixé
-  avatar:         laura_bw.png
+  avatar:         profile.jpg
   bio:            I'm from the lively town of Barcelona! I currently work in Munich as a postdoctoral researcher, after spending some wonderful time in Zurich, Ann Arbor and Hannover. 
   email:          leal.taixe@tum.de
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
