--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ disqus_shortname: lealtaixe
 owner:
   name:           Laura Leal-Taixé
   avatar:         profile.jpg
-  bio:            I'm from the lively town of Barcelona! I currently work in Munich as a research group leader, after spending some wonderful time in Zurich, Ann Arbor and Hannover. 
+  bio:            I'm from the lively town of Barcelona! I am currently a tenure-track professor Munich, after spending some wonderful time in Zurich, Ann Arbor and Hannover. 
   email:          leal.taixe@tum.de
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: lealtaixe
